<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#090D12">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="393dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="218dp"
        android:background="#101925"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="@+id/textView11"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#101925"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView15" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="62dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="13dp"
        android:text="@string/a4_main_text"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar4" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="301dp"
        android:layout_height="74dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="26dp"
        android:text="@string/a4_sub_text"
        android:textAlignment="center"
        android:textColor="#656565"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/button4"
        android:layout_width="176dp"
        android:layout_height="42dp"
        android:layout_marginBottom="192dp"
        android:backgroundTint="#1E88E5"
        android:text="@string/a4_btn_text"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/toolbar5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a4_header_text"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar4"
        app:layout_constraintEnd_toStartOf="@+id/imageView15"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toEndOf="@+id/imageView14"
        app:layout_constraintTop_toTopOf="@+id/toolbar4"
        app:layout_constraintVertical_bias="0.551" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:backgroundTint="#1E88E5"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/toolbar5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_baseline_mark_email_unread_24" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="35dp"
        android:layout_height="33dp"
        android:layout_marginStart="44dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar5"
        app:layout_constraintStart_toStartOf="@+id/toolbar5"
        app:layout_constraintTop_toTopOf="@+id/toolbar5"
        app:layout_constraintVertical_bias="0.521"
        app:srcCompat="@drawable/ic_baseline_home_24" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="35dp"
        android:layout_height="33dp"
        android:layout_marginStart="64dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
        app:layout_constraintStart_toEndOf="@+id/imageView10"
        app:layout_constraintTop_toTopOf="@+id/imageView10"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_search_24" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="35dp"
        android:layout_height="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView11"
        app:layout_constraintEnd_toStartOf="@+id/imageView13"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toEndOf="@+id/imageView11"
        app:layout_constraintTop_toTopOf="@+id/imageView11"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_baseline_notifications_none_24" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="35dp"
        android:layout_height="32dp"
        android:layout_marginEnd="24dp"
        android:tint="#1E88E5"
        app:layout_constraintBottom_toBottomOf="@+id/imageView12"
        app:layout_constraintEnd_toEndOf="@+id/toolbar5"
        app:layout_constraintTop_toTopOf="@+id/imageView12"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_email_24" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="284dp"
        android:layout_marginBottom="8dp"
        android:tint="#1E88E5"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar4"
        app:layout_constraintEnd_toStartOf="@+id/imageView15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar4"
        app:srcCompat="@drawable/ic_baseline_menu_24" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="636dp"
        android:backgroundTint="#1E88E5"
        app:layout_constraintBottom_toTopOf="@+id/toolbar5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView14"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_settings_24" />
</androidx.constraintlayout.widget.ConstraintLayout>